--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>📷 営業報告（PWA）</title>
+  <title>📷 営業報告（PWA＋GPS）</title>
 
-  <!-- PWAマニフェスト -->
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#007bff" />
 
@@ -47,18 +46,37 @@
   </style>
 </head>
 <body>
-  <h1>📷 営業報告（現地撮影）</h1>
+  <h1>📷 営業報告（GPS付き撮影）</h1>
   <input type="file" accept="image/*" capture="environment" id="cameraInput">
   <img id="preview" src="" alt="プレビュー" style="display:none;">
-  <div id="info"></div>
+  <div id="info">📍 位置情報取得中...</div>
   <button id="uploadBtn">アップロード</button>
 
-  <script src="https://cdn.jsdelivr.net/npm/exif-js"></script>
   <script>
     const input = document.getElementById('cameraInput');
     const preview = document.getElementById('preview');
     const info = document.getElementById('info');
     let selectedFile = null;
+    let currentLat = null;
+    let currentLon = null;
+    let timestamp = null;
+
+    // 位置情報取得
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        (position) => {
+          currentLat = position.coords.latitude;
+          currentLon = position.coords.longitude;
+          timestamp = new Date().toLocaleString();
+          info.innerHTML = `📅 撮影日時: ${timestamp}<br>📍 緯度: ${currentLat.toFixed(5)} / 経度: ${currentLon.toFixed(5)}`;
+        },
+        (error) => {
+          info.innerHTML = "⚠️ 位置情報の取得に失敗しました。許可されていますか？";
+        }
+      );
+    } else {
+      info.innerHTML = "⚠️ 位置情報がサポートされていません。";
+    }
 
     input.addEventListener('change', function () {
       const file = input.files[0];
@@ -68,17 +86,6 @@
       reader.onload = function (e) {
         preview.src = e.target.result;
         preview.style.display = 'block';
-
-        const img = new Image();
-        img.onload = function () {
-          EXIF.getData(img, function () {
-            const dateTime = EXIF.getTag(this, 'DateTimeOriginal');
-            const lat = EXIF.getTag(this, 'GPSLatitude');
-            const lon = EXIF.getTag(this, 'GPSLongitude');
-            info.innerHTML = `📅 撮影日時: ${dateTime || 'なし'}<br>📍 緯度: ${lat || 'なし'} / 経度: ${lon || 'なし'}`;
-          });
-        };
-        img.src = e.target.result;
       };
       reader.readAsDataURL(file);
     });
@@ -88,8 +95,7 @@
         alert("画像を選択してください。");
         return;
       }
-      alert("✅ アップロード処理（Firebase連携は今後追加）");
-      // 後で Firebase 連携やサイズ圧縮処理をここに追加予定
+      alert(`✅ アップロード処理（仮）\n撮影日時: ${timestamp}\n緯度: ${currentLat} / 経度: ${currentLon}`);
     });
   </script>
 
