--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       border-radius: 6px;
       cursor: pointer;
       margin-top: 1.5rem;
+      text-align: left;
     }
     button:hover {
       background-color: #0056b3;
@@ -55,6 +56,7 @@
       margin-top: 1rem;
       font-size: 0.9rem;
       color: #444;
+      display: none;
     }
   </style>
 </head>
@@ -71,79 +73,4 @@
   <input type="time" id="visitTime">
 
   <label>営業内容（メモ）</label>
-  <textarea id="content" rows="4" placeholder="例：リーフレット設置のお願いなど"></textarea>
-
-  <label>写真を撮影／選択</label>
-  <input type="file" accept="image/*" capture="environment" id="cameraInput">
-  <img id="preview" src="" alt="プレビュー" style="display:none;">
-
-  <div id="info">📍 ページ表示時に位置情報を取得します</div>
-
-  <button id="uploadBtn">アップロード</button>
-
-  <script>
-    const input = document.getElementById('cameraInput');
-    const preview = document.getElementById('preview');
-    const info = document.getElementById('info');
-    let selectedFile = null;
-    let lat = null;
-    let lon = null;
-    let timestamp = null;
-
-    window.addEventListener('DOMContentLoaded', () => {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-          (position) => {
-            lat = position.coords.latitude;
-            lon = position.coords.longitude;
-            timestamp = new Date().toLocaleString();
-            info.innerHTML = `📅 撮影日時: ${timestamp}<br>📍 緯度: ${lat.toFixed(5)} / 経度: ${lon.toFixed(5)}`;
-          },
-          (error) => {
-            info.innerHTML = "⚠️ 位置情報の取得に失敗しました。許可されていますか？";
-          }
-        );
-      } else {
-        info.innerHTML = "⚠️ 位置情報がサポートされていません。";
-      }
-    });
-
-    input.addEventListener('change', function () {
-      const file = input.files[0];
-      if (!file) return;
-      selectedFile = file;
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        preview.src = e.target.result;
-        preview.style.display = 'block';
-      };
-      reader.readAsDataURL(file);
-    });
-
-    document.getElementById('uploadBtn').addEventListener('click', async () => {
-      const place = document.getElementById('placeName').value;
-      const person = document.getElementById('personName').value;
-      const time = document.getElementById('visitTime').value;
-      const content = document.getElementById('content').value;
-
-      if (!selectedFile || !place || !person || !time || !content) {
-        alert("すべての項目と写真を入力してください。");
-        return;
-      }
-
-      const summary = `✅ アップロード処理（仮）\n\n` +
-        `🏢 営業先：${place}\n👤 担当者：${person}\n🕒 訪問時間：${time}\n📅 撮影日時：${timestamp}\n📍 緯度：${lat} / 経度：${lon}\n📝 内容：${content}`;
-
-      alert(summary);
-    });
-  </script>
-
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').then(() => {
-        console.log("✅ Service Worker 登録完了");
-      });
-    }
-  </script>
-</body>
-</html>
+  <textarea id="content" rows="4" placeholder="例：リーフレット設置の
